--- a/bower.json
+++ b/bower.json
@@ -8,7 +8,8 @@
     "ember-data": "~1.0.0-beta.3",
     "ember-resolver": "git://github.com/stefanpenner/ember-jj-abrams-resolver.git#master",
     "ic-ajax": "~0.2",
-    "bootstrap": "~3.0.2"
+    "bootstrap": "~3.0.2",
+    "components-font-awesome": "~4.0.3"
   },
   "resolutions": {
     "ember": "~1.2.0",
