--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "karma-coverage": "~0.0.3",
     "karma-phantomjs-launcher": "~0.0.2",
     "express-namespace": "~0.1.1",
-    "request": "~2.27.0"
+    "request": "~2.27.0",
+    "connect-livereload": "~0.3.1"
   }
 }
