--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "karma-phantomjs-launcher": "~0.0.2",
     "express-namespace": "~0.1.1",
     "request": "~2.27.0",
-    "connect-livereload": "~0.3.1"
+    "connect-livereload": "~0.3.1",
+    "loom-generators-ember-appkit": "~1.0.2"
   }
 }
