--- a/package.json
+++ b/package.json
@@ -22,9 +22,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "request": "~2.27.0",
     "express": "~3.4.2",
-    "express-namespace": "~0.1.1",
     "lockfile": "~>0.3.0",
     "bower": "~1.2.7",
     "grunt": "~0.4.2",
@@ -43,14 +41,45 @@
     "grunt-concurrent": "~0.3.1",
     "grunt-usemin": "~0.1.12",
     "grunt-rev": "~0.1.0",
-    "grunt-ember-templates": "~0.4.18"
-  },
-  "devDependencies": {
+    "grunt-ember-templates": "~0.4.18",
     "grunt-karma": "~0.5",
     "karma": "~0.9.4",
     "karma-qunit": "~0.0.3",
     "karma-coverage": "~0.0.3",
     "karma-phantomjs-launcher": "~0.0.2",
+    "express-namespace": "~0.1.1",
+    "request": "~2.27.0",
+    "connect-livereload": "~0.3.1",
+    "loom-generators-ember-appkit": "~1.0.2"
+  },
+  "devDependencies": {
+    "express": "~3.4.2",
+    "lockfile": "~>0.3.0",
+    "bower": "~1.2.7",
+    "grunt": "~0.4.2",
+    "grunt-cli": "~0.1.9",
+    "load-grunt-config": "git://github.com/Pradeek/load-grunt-config.git",
+    "grunt-contrib-watch": "~0.5.3",
+    "grunt-contrib-copy": "~0.4.1",
+    "grunt-contrib-concat": "~0.3.0",
+    "grunt-contrib-clean": "~0.4.1",
+    "grunt-contrib-jshint": "~0.7.2",
+    "grunt-contrib-uglify": "~0.2.2",
+    "grunt-contrib-cssmin": "~0.6.1",
+    "grunt-preprocess": "~3.0.1",
+    "grunt-es6-module-transpiler": "~0.5.1",
+    "grunt-concat-sourcemap": "~0.3.0",
+    "grunt-concurrent": "~0.3.1",
+    "grunt-usemin": "~0.1.12",
+    "grunt-rev": "~0.1.0",
+    "grunt-ember-templates": "~0.4.18",
+    "grunt-karma": "~0.5",
+    "karma": "~0.9.4",
+    "karma-qunit": "~0.0.3",
+    "karma-coverage": "~0.0.3",
+    "karma-phantomjs-launcher": "~0.0.2",
+    "express-namespace": "~0.1.1",
+    "request": "~2.27.0",
     "connect-livereload": "~0.3.1",
     "loom-generators-ember-appkit": "~1.0.2"
   }
