--- a/bower.json
+++ b/bower.json
@@ -4,15 +4,13 @@
     "handlebars": "~1.1.2",
     "jquery": "~1.9.1",
     "qunit": "~1.12.0",
-    "ember": "~1.2.0",
-    "ember-data": "~1.0.0-beta.3",
+    "ember": "~1.4.0-beta.2",
+    "ember-data": "~1.0.0-beta.6",
     "ember-resolver": "git://github.com/stefanpenner/ember-jj-abrams-resolver.git#master",
-    "ic-ajax": "~0.2",
-    "bootstrap": "~3.0.2",
-    "components-font-awesome": "~4.0.3"
+    "ic-ajax": "~0.3.0",
+    "ember-testing-httpRespond": "~0.1.1"
   },
   "resolutions": {
-    "ember": "~1.2.0",
-    "handlebars": "~1.1.2"
+    "ember": "~1.4.0-beta.2"
   }
 }
