--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "APIMethod": "stub",
   "proxyURL": "http://localhost:8000",
   "proxyPath": "/api",
+  "docURL": "http://localhost:8000/docs/index.html",
   "version": "0.0.0",
   "private": true,
   "directories": {
@@ -25,7 +26,7 @@
   "devDependencies": {
     "express": "~3.4.8",
     "lockfile": "~0.4.2",
-    "bower": "~1.2.7",
+    "bower": "~1.3.2",
     "grunt": "~0.4.2",
     "grunt-cli": "~0.1.9",
     "load-grunt-config": "~0.7.0",
@@ -43,12 +44,13 @@
     "grunt-usemin": "~0.1.13",
     "grunt-rev": "~0.1.0",
     "grunt-ember-templates": "~0.4.18",
-    "grunt-contrib-testem": "~0.5.14",
+    "grunt-contrib-testem": "~0.5.16",
     "express-namespace": "~0.1.1",
     "request": "~2.33.0",
-    "loom-generators-ember-appkit": "~1.0.2",
+    "loom-generators-ember-appkit": "~1.0.5",
     "originate": "~0.1.5",
     "loom": "~3.1.2",
-    "connect-livereload": "~0.3.1"
+    "connect-livereload": "~0.3.1",
+    "grunt-es6-import-validate": "0.0.6"
   }
 }
