--- a/tests/.jshintrc
+++ b/tests/.jshintrc
@@ -10,8 +10,6 @@
     "QUnit",
     "define",
     "console",
-    "require",
-    "requirejs",
     "equal",
     "notEqual",
     "notStrictEqual",
@@ -27,6 +25,9 @@
     "ok",
     "strictEqual",
     "module",
+    "moduleFor",
+    "moduleForComponent",
+    "moduleForModel",
     "process",
     "expect",
     "visit",
@@ -36,9 +37,14 @@
     "keyEvent",
     "find",
     "wait",
+    "DS",
     "keyEvent",
     "isolatedContainer",
-    "startApp"
+    "startApp",
+    "andThen",
+    "currentURL",
+    "currentPath",
+    "currentRouteName"
   ],
   "node" : false,
   "browser" : false,
