--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "broccoli-ember-hbs-template-compiler": "^1.5.0",
     "broccoli-sass": "^0.2.1",
     "ember-cli": "0.0.37",
-    "ember-cli-ember-data": "0.0.4",
+    "ember-cli-ember-data": "^0.1.0",
     "ember-cli-ic-ajax": "0.1.0",
     "express": "^4.1.1",
     "glob": "^3.2.9",
