--- a/bower.json
+++ b/bower.json
@@ -13,6 +13,7 @@
     "ember-qunit-notifications": "^0.0.3",
     "ember-cli-test-loader": "rjackson/ember-cli-test-loader#0.0.2",
     "bootstrap-sass-official": "~3.2.0",
-    "fontawesome": "~4.1.0"
+    "fontawesome": "~4.1.0",
+    "moment": "~2.7.0"
   }
 }
