--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,20 @@
+---
 language: node_js
-node_js:
-  - 0.10
-before_script:
-  - npm install -g ember-cli
+
+sudo: false
+
+cache:
+  directories:
+    - node_modules
+
+before_install:
+  - "npm config set spin false"
+  - "npm install -g npm@^2"
+
+install:
   - npm install -g bower
-  - npm install -g phantomjs
+  - npm install
   - bower install
+
+script:
+  - npm test
