--- a/bower.json
+++ b/bower.json
@@ -3,15 +3,16 @@
   "dependencies": {
     "handlebars": "~1.3.0",
     "jquery": "^1.11.1",
-    "qunit": "~1.12.0",
-    "ember-qunit": "~0.1.5",
-    "ember": "1.6.0",
-    "ember-resolver": "~0.1.1",
-    "loader": "stefanpenner/loader.js#1.0.0",
-    "ember-cli-shims": "stefanpenner/ember-cli-shims#0.0.2",
-    "ember-load-initializers": "stefanpenner/ember-load-initializers#0.0.2",
-    "ember-qunit-notifications": "^0.0.3",
-    "ember-cli-test-loader": "rjackson/ember-cli-test-loader#0.0.2",
+    "ember": "1.8.1",
+    "ember-data": "1.0.0-beta.12",
+    "ember-resolver": "~0.1.11",
+    "loader.js": "ember-cli/loader.js#1.0.1",
+    "ember-cli-shims": "ember-cli/ember-cli-shims#0.0.3",
+    "ember-cli-test-loader": "rwjblue/ember-cli-test-loader#0.0.4",
+    "ember-load-initializers": "ember-cli/ember-load-initializers#0.0.2",
+    "ember-qunit": "0.1.8",
+    "ember-qunit-notifications": "0.0.4",
+    "qunit": "~1.15.0",
     "bootstrap-sass-official": "~3.2.0",
     "fontawesome": "~4.1.0",
     "moment": "~2.7.0"
