--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "broccoli-asset-rev": "^2.0.0",
     "broccoli-ember-hbs-template-compiler": "^1.6.1",
     "broccoli-sass": "0.4.0",
-    "node-sass": "2.0.1",
+    "connect-restreamer": "^1.0.1",
     "ember-cli": "0.1.12",
     "ember-cli-content-security-policy": "^0.3.0",
     "ember-cli-dependency-checker": "0.0.7",
@@ -33,6 +33,8 @@
     "ember-data": "1.0.0-beta.12",
     "ember-export-application-global": "^1.0.0",
     "express": "^4.8.5",
-    "glob": "^4.0.5"
+    "glob": "^4.0.5",
+    "morgan": "^1.5.1",
+    "node-sass": "2.0.1"
   }
 }
