--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "devDependencies": {
     "broccoli-asset-rev": "^2.0.0",
     "broccoli-sass": "0.6.0",
+    "connect-restreamer": "^1.0.1",
     "ember-cli": "0.2.0",
     "ember-cli-app-version": "^0.3.2",
     "ember-cli-babel": "^4.3.0",
@@ -32,6 +33,9 @@
     "ember-cli-qunit": "^0.3.9",
     "ember-cli-uglify": "1.0.1",
     "ember-data": "^1.0.0-beta.15",
-    "ember-export-application-global": "^1.0.2"
+    "ember-export-application-global": "^1.0.2",
+    "express": "^4.12.3",
+    "glob": "^4.5.3",
+    "morgan": "^1.5.2"
   }
 }
