--- a/package.json
+++ b/package.json
@@ -20,24 +20,17 @@
   "license": "MIT",
   "devDependencies": {
     "broccoli-asset-rev": "^2.0.0",
-    "broccoli-sass": "0.6.0",
-    "connect-restreamer": "^1.0.1",
-    "ember-cli": "0.2.0",
-    "ember-cli-app-version": "^0.3.2",
-    "ember-cli-babel": "^4.3.0",
+    "ember-cli": "0.2.1",
+    "ember-cli-app-version": "0.3.2",
+    "ember-cli-babel": "^4.0.0",
     "ember-cli-content-security-policy": "0.3.0",
     "ember-cli-dependency-checker": "0.0.8",
-    "ember-cli-htmlbars": "^0.7.4",
+    "ember-cli-htmlbars": "0.7.4",
     "ember-cli-ic-ajax": "0.1.1",
     "ember-cli-inject-live-reload": "^1.3.0",
-    "ember-cli-qunit": "^0.3.9",
-    "ember-cli-simple-auth": "0.7.3",
-    "ember-cli-simple-auth-oauth2": "0.7.3",
+    "ember-cli-qunit": "0.3.9",
     "ember-cli-uglify": "1.0.1",
-    "ember-data": "^1.0.0-beta.15",
-    "ember-export-application-global": "^1.0.2",
-    "express": "^4.12.3",
-    "glob": "^4.5.3",
-    "morgan": "^1.5.2"
+    "ember-data": "1.0.0-beta.16",
+    "ember-export-application-global": "^1.0.2"
   }
 }
